# naacl25-prompt-compositions

./: .gitignore  README.md  evaluation.ipynb  pyproject.toml  requirements.txt  run_baseline.sh  run_composition_prediction_experiments.sh  run_experiments.sh  run_finetune_experiments.sh
experiments/: baseline_self_diagnosis.py  cobra_cot_greedy.py  cobra_greedy.py  common_sense_qa_cot_greedy.py  common_sense_qa_greedy.py  esnli_cot_greedy.py  esnli_greedy.py  sbic_cot_greedy.py  sbic_greedy.py  semeval_cot_greedy.py  semeval_greedy.py  stereoset_cot_greedy.py  stereoset_greedy.py
shapley_analysis/: requirements.txt  run.py  si_graph.py
src/: prompt_templates.py
src/bias_detection/: accelerate_finetune_config.yaml  data_handler.py  finetune-inference.py  finetune-train.py
src/bias_detection/config/: __init__.py  seeds.txt  settings.py
src/bias_detection/utils/: __init__.py  data_preprocessing.py  experiments.py  general.py
src/components_prediction/: accelerate_config.yaml  transformer-inference.py  transformer-train.py
src/flex-infer/: pyproject.toml
src/flex-infer/src/flex_infer/: __init__.py  evaluation.py  generation_params.py  llm.py  transformers.py  vllm.py
src/flex-infer/src/flex_infer/config/: __init__.py  prompt_formats.py  settings.py
src/flex-infer/src/flex_infer/utils/: __init__.py  general.py
src/flex-infer/tests/: test_generation_params.py  test_llm.py  test_model_settings.py
src/prompt-components/: definitions.json  directional_stimulus.json  reasoning_steps.json  system_prompts.json  task_description.json
(+1 files in other folders)
