[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bias_detection"
version = "0.0.1"
# dependencies = [""]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
select = ["E", "F"]
line-length = 100

# Ignore `F401` violations in any `__init__.py`
per-file-ignores = {"__init__.py" = ["F401"]}
